Removes Java 8 requirements from code